switch typography theme

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "react-helmet": "^5.2.1",
     "react-typography": "^0.16.19",
     "typography": "^0.16.19",
-    "typography-theme-sutro": "^0.16.19"
+    "typography-theme-parnassus": "^0.16.19"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
