--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby-plugin-react-helmet": "^3.1.2",
     "gatsby-plugin-sharp": "^2.2.6",
     "gatsby-plugin-typography": "^2.3.2",
+    "gatsby-remark-autolink-headers": "^2.1.3",
     "gatsby-remark-copy-linked-files": "^2.1.2",
     "gatsby-remark-custom-blocks": "^2.1.2",
     "gatsby-remark-images": "^3.1.7",
@@ -27,6 +28,7 @@
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
     "react-typography": "^0.16.19",
+    "slugify": "^1.3.4",
     "typography": "^0.16.19",
     "typography-breakpoint-constants": "^0.16.19",
     "typography-theme-parnassus": "^0.16.19"
