--- a/package.json
+++ b/package.json
@@ -5,22 +5,23 @@
   "version": "0.1.0",
   "author": "Daniel Johnson",
   "dependencies": {
+    "@mdx-js/mdx": "^1.1.5",
+    "@mdx-js/react": "^1.1.5",
     "gatsby": "^2.13.19",
     "gatsby-image": "^2.2.6",
     "gatsby-plugin-catch-links": "^2.1.2",
     "gatsby-plugin-dark-mode": "^1.1.0",
     "gatsby-plugin-manifest": "^2.2.3",
+    "gatsby-plugin-mdx": "^1.0.22",
     "gatsby-plugin-offline": "^2.2.3",
     "gatsby-plugin-react-helmet": "^3.1.2",
     "gatsby-plugin-sharp": "^2.2.6",
     "gatsby-plugin-typography": "^2.3.2",
     "gatsby-remark-autolink-headers": "^2.1.3",
     "gatsby-remark-copy-linked-files": "^2.1.2",
-    "gatsby-remark-custom-blocks": "^2.1.2",
     "gatsby-remark-images": "^3.1.7",
     "gatsby-remark-prismjs": "^3.3.3",
     "gatsby-source-filesystem": "^2.1.5",
-    "gatsby-transformer-remark": "^2.6.4",
     "gatsby-transformer-sharp": "^2.2.3",
     "prismjs": "^1.16.0",
     "react": "^16.8.6",
