--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-remark-prismjs": "^3.3.4",
     "gatsby-source-filesystem": "^2.1.8",
     "gatsby-transformer-sharp": "^2.2.5",
+    "prism-react-renderer": "^0.1.7",
     "prismjs": "^1.17.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
